--- a/package.json
+++ b/package.json
@@ -6,14 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "slicemachine": "start-slicemachine --port 9999"
+    "slicemachine": "start-slicemachine --port 9999",
+    "storybook": "start-storybook -p 8888",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "next": "10.0.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "essential-slices": "^1.0.3",
+    "next": "^10.0.7",
+    "next-slicezone": "^0.0.13",
+    "next-transpile-modules": "^6.3.0",
+    "prismic-javascript": "^3.0.2",
+    "prismic-reactjs": "^1.3.3",
+    "react": "^16.0.1",
+    "react-dom": "^16.0.1",
+    "theme-ui": "^0.3.5"
   },
   "devDependencies": {
+    "@storybook/react": "^6.1.18",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-react-require": "^3.1.3",
     "slice-machine-ui": "^0.0.43"
   }
 }
